--- a/webtest/index.html
+++ b/webtest/index.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
   <script src="https://d3js.org/d3.v4.min.js"></script>
   <style>
-    circle {fill:rgb(254, 101, 152); mix-blend-mode:lighten}
+    circle {fill:rgb(254, 101, 152)}
     body { background-color:#fff0c2; margin:0;position:fixed;top:0;right:0;bottom:0;left:0; }
 
     polygon {
@@ -29,6 +29,27 @@
   .append("g")
     .attr("transform",
           "translate(" + margin.left + "," + margin.top + ")");
+
+
+          	//SVG filter for the gooey effect
+          	//Code taken from http://tympanus.net/codrops/2015/03/10/creative-gooey-effects/
+          	var defs = svg.append('defs');
+          	var filter = defs.append('filter').attr('id','gooey');
+          	filter.append('feGaussianBlur')
+          		.attr('in','SourceGraphic')
+          		.attr('stdDeviation','2.4')
+          		.attr('result','blur');
+          	filter.append('feColorMatrix')
+          		.attr('in','blur')
+          		.attr('mode','matrix')
+          		.attr('values','1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 25 -11')
+          		.attr('result','gooey');
+          	filter.append('feComposite')
+          		.attr('in','SourceGraphic')
+          		.attr('in2','gooey')
+          		.attr('operator','atop');
+
+
 
 var select = document.getElementById("dropdown");
 var x = d3.scaleLinear().range([0, 500]);
@@ -78,17 +99,33 @@ alerts( Object.keys(window.info.alerts)[0])
 
 function alerts(time){
 console.log(time)
+
 d3.select('svg').selectAll('circle').remove()
+
+window.info.potential[time].forEach(p=>{
+
+   //console.log(p)
+
+   svg.append("circle")
+     .attr("r", p[2]+1)
+     .attr('opacity',.9)
+     .attr("cx", x(p[0]))
+     .attr("cy", y(p[1]))
+     .style('fill','#1965fd').style("filter", "url(#gooey)")
+
+})
+
 
 window.info.alerts[time].forEach(p=>{
 
    //console.log(p)
 
    svg.append("circle")
-     .attr("r", p[2]+4)
-     .attr('opacity',.8)
+     .attr("r", p[2]+2.5)
+     .attr('opacity',.5)
      .attr("cx", x(p[0]))
      .attr("cy", y(p[1]))
+     .style('fill','#339933').style("filter", "url(#gooey)")
 
 })
 
@@ -96,30 +133,6 @@ window.info.alerts[time].forEach(p=>{
 
 
 
-
-
-  var point = {"x": 24, "y": 31}
-
-  var poly = [{"x":10, "y":50},
-        {"x":20,"y":20},
-        {"x":50,"y":10},
-        {"x":30,"y":30}];
-
-
-  svg.selectAll("polygon")
-    .data([poly])
-  .enter().append("polygon")
-    .attr("points",function(d) {
-        return d.map(function(d) {
-            return [x(d.x),y(d.y)].join(",");
-        }).join(" ");
-    });
-
-  svg.append("circle")
-    .attr("r", 4)
-    .attr('opacity',.8)
-    .attr("cx", x(point.x))
-    .attr("cy", y(point.y))
 
 
 
